@@ -11,7 +11,7 @@ dwarf::known_tag (int tag)
 {
   switch (tag)
     {
-#define ONE_KNOWN_DW_TAG(name, id)		case id: return #name;
+#define ONE_KNOWN_DW_TAG(name, id)		case id: return #id;
 #define ONE_KNOWN_DW_TAG_DESC(name, id, desc)	ONE_KNOWN_DW_TAG (name, id)
       ALL_KNOWN_DW_TAG
     }
@@ -23,7 +23,7 @@ dwarf::known_attribute (int name)
 {
   switch (name)
     {
-#define ONE_KNOWN_DW_AT(name, id)		case id: return #name;
+#define ONE_KNOWN_DW_AT(name, id)		case id: return #id;
 #define ONE_KNOWN_DW_AT_DESC(name, id, desc)	ONE_KNOWN_DW_AT (name, id)
       ALL_KNOWN_DW_AT
     }
