@@ -35,17 +35,32 @@ namespace elfutils
       }
     };
 
-    template<const char *lookup_known (int)>
-    static inline std::string known_name (int code)
+    static inline std::string hex_string (int code)
     {
-      const char *known = lookup_known (code);
-      if (known != NULL)
-	return std::string (known);
       std::ostringstream os;
       os.setf(std::ios::hex, std::ios::basefield);
       os << code;
       return os.str ();
     }
+
+    template<typename prefix_type, const char *lookup_known (int)>
+    struct known
+    {
+      // The names in the table are the identifiers, with prefix.
+      static inline std::string identifier (int code)
+      {
+	const char *known = lookup_known (code);
+	return known == NULL ? hex_string (code) : std::string (known);
+      }
+
+      // For the pretty name, skip over the prefix.
+      static inline std::string name (int code)
+      {
+	const char *known = lookup_known (code);
+	return (known == NULL ? hex_string (code)
+		: std::string (&known[sizeof (prefix_type) - 1]));
+      }
+    };
 
     template<typename t1, typename t2>
     struct equal_to : public std::binary_function<t1, t2, bool>
