@@ -1,3 +1,9 @@
+2009-03-24  Roland McGrath  <roland@redhat.com>
+
+	* dwarf-print.cc: New file.
+	* Makefile.am (noinst_PROGRAMS): Add it.
+	(dwarf_print_SOURCES, dwarf_print_LDADD): New variables.
+
 2009-01-10  Roland McGrath  <roland@redhat.com>
 
 	* run-dwarfcmp-self.sh: Also run with -T.
